--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,17 +41,17 @@ jobs:
       - name: Run junit-processor
         run: |
           junit-processor -p 1 /home/runner/work/tutorial-java-karate/tutorial-java-karate/target/karate-reports/examples.DummyUsers.dummyusers.xml
-      - name: "Import results to Xray (server/DC)"
-        uses: mikepenz/xray-action@v2.3.0
-        with:
-           username: ${{ secrets.JIRASERVER_USERNAME }}
-           password: ${{ secrets.JIRASERVER_PASSWORD }}
-           xrayCloud: "false"
-           xrayBaseUrl: ${{ secrets.JIRASERVER_BASE_URL }}
-           testFormat: "junit"
-           testPaths: "junit-new.xml"
-           testPlanKey: "${{ secrets.XRAYSERVER_TEST_PLAN_KEY }}"
-           projectKey: "${{ secrets.JIRASERVER_PROJECT_KEY }}"
+#      - name: "Import results to Xray (server/DC)"
+#        uses: mikepenz/xray-action@v2.3.0
+#        with:
+#           username: ${{ secrets.JIRASERVER_USERNAME }}
+#           password: ${{ secrets.JIRASERVER_PASSWORD }}
+#           xrayCloud: "false"
+#           xrayBaseUrl: ${{ secrets.JIRASERVER_BASE_URL }}
+#           testFormat: "junit"
+#           testPaths: "junit-new.xml"
+#           testPlanKey: "${{ secrets.XRAYSERVER_TEST_PLAN_KEY }}"
+#           projectKey: "${{ secrets.JIRASERVER_PROJECT_KEY }}"
       - name: "Import results to Xray (cloud)"
         uses: mikepenz/xray-action@v2.3.0
         with:
