--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,10 +55,10 @@ jobs:
       - name: "Import results to Xray (cloud)"
         uses: mikepenz/xray-action@v2.3.0
         with:
-           username: "${{ secrets.XRAYCLOUD_CLIENT_ID }}"
-           password: "${{ secrets.XRAYCLOUD_CLIENT_SECRET }}"
+           username: ${{ secrets.XRAYCLOUD_CLIENT_ID }}
+           password: ${{ secrets.XRAYCLOUD_CLIENT_SECRET }}
            xrayCloud: "true"
            testFormat: "junit"
            testPaths: "junit-new.xml"
-           testPlanKey: "${{ secrets.XRAYCLOUD_TEST_PLAN_KEY }}"
-           projectKey: "${{ secrets.JIRACLOUD_PROJECT_KEY }}"
+           testPlanKey: ${{ secrets.XRAYCLOUD_TEST_PLAN_KEY }}
+           projectKey: ${{ secrets.JIRACLOUD_PROJECT_KEY }}
